# pico-usb-host-msc-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  msc-demo-cli.cpp  msc-demo-cli.h  pico-usb-host-msc-demo.c  pico-usb-host-msc-demo.cpp  tusb_config.h
PIO-USB-Demo/: CMakeLists.txt  README.md  pico-usb-host-msc-demo.c  tusb_config.h
lib/fatfs/: CMakeLists.txt
lib/fatfs/source/: CMakeLists.txt  diskio.c  diskio.h  ffconf.h
lib/rp2040_rtc/: CMakeLists.txt  rp2040_rtc.cpp  rp2040_rtc.h
patches/: 0001-disable-RP2040-USB-Host-double-buffering.patch  0002-Add-missing-reset-recovery-delay.patch
